[add] getactive
